-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.3.0
-
None
-
Windows 8.1 x64, Qt 5.4.0 Android armeabi-v7a, GCC 4.9
Most of the build process looks good and works well, but spaces aren't supported in the "Copy application data" step. Any chance that a line could get added for checking for if the path contains spaces, and if it does, wrap it in quotes here?
Every other build type in Qt I've tried handles spaces without any other problem. The Shadow building is great, and works well.
I haven't personally verified it on Windows phone, but it looks like someone else has seen it, too.
Thanks.
Here is the tail of the Compile Output:
C:\Android\NDK/toolchains/arm-linux-androideabi-4.9/prebuilt/windows-x86_64/bin/arm-linux-androideabi-g++ --sysroot=C:\Android\NDK/platforms/android-9/arch-arm/ -Wl,-soname,libaab-demo.so -Wl,-rpath-link=C:/Qt/5.4/android_armv7/lib -Wl,--no-undefined -Wl,-z,noexecstack -shared -o libaab-demo.so main.obj mainwindow.obj qrc_resources.obj moc_mainwindow.obj -LC:\Android\NDK/sources/cxx-stl/gnu-libstdc++/4.9/libs/armeabi-v7a -LC:\Android\NDK/platforms/android-9/arch-arm//usr/lib -LC:/Qt/5.4/android_armv7/lib -lQt5MultimediaWidgets -Lc:\Utils\android\ndk/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a -Lc:\Utils\android\ndk/platforms/android-9/arch-arm//usr/lib -LC:\Utils\icu32_53_1_mingw482\lib -LC:\utils\postgresql\pgsql\lib -LC:\utils\mysql\mysql\lib -Lc:\mingw491\mingw32\lib -LC:\Utils\pgsql\lib -LC:\temp\opensll-android-master\openssl-android-master\lib -LC:\Qt\5.4\android_armv7/lib -lQt5Multimedia -lQt5Widgets -lQt5Gui -lQt5Network -lQt5Core -lGLESv2 -lgnustl_shared -llog -lz -lm -ldl -lc -lgcc 14:16:37: The process "C:\Qt\Tools\mingw491_32\bin\mingw32-make.exe" exited normally. 14:16:37: Starting: "C:\Qt\Tools\mingw491_32\bin\mingw32-make.exe" INSTALL_ROOT="C:\Users\user name\Code\build-aab-demo-Android_for_armeabi_v7a_GCC_4_9_Qt_5_4_0-Debug\android-build" install 'name\Code\build-aab-demo-Android_for_armeabi_v7a_GCC_4_9_Qt_5_4_0-Debug\android-build\libs\armeabi-v7a' is not recognized as an internal or external command, operable program or batch file. 'name\Code\build-aab-demo-Android_for_armeabi_v7a_GCC_4_9_Qt_5_4_0-Debug\android-build\libs\armeabi-v7a' is not recognized as an internal or external command, operable program or batch file. makefile:14917: recipe for target 'install_target' failed mingw32-make: *** [install_target] Error 1 14:16:38: The process "C:\Qt\Tools\mingw491_32\bin\mingw32-make.exe" exited with code 2. Error while building/deploying project aab-demo (kit: Android for armeabi-v7a (GCC 4.9, Qt 5.4.0)) When executing step "Copy application data" 14:16:38: Elapsed time: 01:41.
| For Gerrit Dashboard: QTCREATORBUG-13868 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 111869,2 | Android: Properly quote parameters to make install | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |