Android: Properly quote parameters to make install

Change-Id: Id39b63876938c6759829786f54f2448ff730d500
Task-number: QTCREATORBUG-13868
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>